added navigation and hero unit/jumbotron

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 	<!-- Header -->
 	<div class="bg-primary fp-header">
 		<div class="container">
-			<ul class="nav">
-				<li class="nav-item">
-					<a class="nav-link text-white fp-header-item-link" href="index.html">Strona główna</a>
+			<ul class="nav flex-column flex-md-row justify-content-lg-end text-uppercase">
+				<li class="nav-item fp-header-item-active">
+					<a class="nav-link fp-header-item-link" href="index.html">Strona główna</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link text-white fp-header-item-link" href="portfolio.html">Realizacje</a>
@@ -49,5 +49,14 @@
 			</ul>
 		</div>
 	</div>	
+
+
+	<!-- Hero unit -->
+	<div class="jumbotron text-center fp-hero">
+		<div class="container fp-hero-content">
+			<h1 class="text-uppercase text-white sk-hero-header">Montserrat matrix</h1>
+			<img class="img-fluid sk-hero-subheader" src='https://placehold.it/298x51' alt=''/>
+		</div>
+	</div>
 </body>
 </html>
