--- a/src/index.html
+++ b/src/index.html
@@ -58,5 +58,46 @@
 			<img class="img-fluid sk-hero-subheader" src='https://placehold.it/298x51' alt=''/>
 		</div>
 	</div>
+	<!-- Stopka -->
+	<div class="fp-footer-top">
+		<div class="container fp-footer-top-content">
+			<div class="row">
+				<!-- pierwsza kolumna -->
+				<div class="col-md-6 col-lg-3 mb-5">
+					<h4 class="text-upercase text-white">O nas</h4>
+				</div>
+				<!-- druga kolumna -->
+				<div class="col-md-6 col-lg-3 mb-5">
+					<h4 class="text-upercase text-white">Nawigacja</h4>
+				</div>
+				<!-- trzecia kolumna -->
+				<div class="col-md-6 col-lg-3 mb-5">
+					<h4 class="text-upercase text-white">Kontakt</h4>
+				</div>
+				<!-- czwarta kolumna -->
+				<div class="col-md-6 col-lg-3 mb-5">
+					<h4 class="text-upercase text-white">Newsletter</h4>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
