--- a/src/index.html
+++ b/src/index.html
@@ -64,19 +64,41 @@
 			<div class="row">
 				<!-- pierwsza kolumna -->
 				<div class="col-md-6 col-lg-3 mb-5">
-					<h4 class="text-upercase text-white">O nas</h4>
+					<h4 class="text-upercase text-white mb-3">Isabelle Corners</h4>
+					<p class="fp-footer-text fp-footer-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non fugit dignissimos reprehenderit libero. Sit, maxime, beatae velit iusto cum, sint modi pariatur fugit adipisci nesciunt voluptatem dignissimos eos autem illum ut. Commodi voluptates nostrum soluta odit rem officiis consequatur maiores.</p>
 				</div>
 				<!-- druga kolumna -->
-				<div class="col-md-6 col-lg-3 mb-5">
-					<h4 class="text-upercase text-white">Nawigacja</h4>
+				<div class="col-md-6 col-lg-3 mb-7">
+					<h4 class="text-upercase text-white mb-3">Considine Crossing</h4>
+					<ul class="list-unstyled">
+						<li>
+							<a class="text-primary fp-footer-text" a href="#">Regulamin serwisu</a>
+						</li>
+						<li>
+							<a class="fp-footer-text" a href="#">17535 Reilly Club</a>
+						</li>
+						<li>
+							<a class="fp-footer-text" a href="#">3803 Stamm Trace</a>
+						</li>
+						<li>
+							<a class="fp-footer-text" a href="#">FAQ & Pomoc</a>
+						</li>
+						<li>
+							<a class="fp-footer-text" a href="#">Kovacek Ford</a>
+						</li>
+					</ul>
 				</div>
 				<!-- trzecia kolumna -->
-				<div class="col-md-6 col-lg-3 mb-5">
-					<h4 class="text-upercase text-white">Kontakt</h4>
+				<div class="col-md-6 col-lg-3 mb-3">
+					<h4 class="text-upercase text-white mb-3">Kontakt</h4>
+					<ul class="list-unstyled fp-footer-text sk-footer-contact-list">
+						<li class="sk-footer-contact-item"></li>
+						<span class="mr-2"><img src=""</span>
+					</ul>
 				</div>
 				<!-- czwarta kolumna -->
-				<div class="col-md-6 col-lg-3 mb-5">
-					<h4 class="text-upercase text-white">Newsletter</h4>
+				<div class="col-md-6 col-lg-3 mb-3">
+					<h4 class="text-upercase text-white mb-3">Newsletter</h4>
 				</div>
 			</div>
 		</div>
