adedd social icons and subscribe button

--- a/src/index.html
+++ b/src/index.html
@@ -90,15 +90,59 @@
 				</div>
 				<!-- trzecia kolumna -->
 				<div class="col-md-6 col-lg-3 mb-3">
-					<h4 class="text-upercase text-white mb-3">Kontakt</h4>
+					<h4 class="text-upercase text-white mb-3">Customer Mobility Administrator</h4>
 					<ul class="list-unstyled fp-footer-text sk-footer-contact-list">
-						<li class="sk-footer-contact-item"></li>
-						<span class="mr-2"><img src=""</span>
+						<li class="sk-footer-contact-item">
+							<span class="mr-2"><img src="/images/ui/contact-footer-icon-email.png"></span>
+							Brekke Lakes
+						</li>
+						<li class="sk-footer-contact-item">
+							<span class="mr-2"><img src="/images/ui/contact-footer-icon-phone.png"></span>
+							Aurelie Well
+						</li>
+						<li class="sk-footer-contact-item">
+							<span class="mr-2"><img src="/images/ui/contact-footer-icon-pin.png"></span>
+							092 Kamren Estates
+						</li>
 					</ul>
+					<div class="d-flex justify-content-between w-75">
+						<span class="bg-primary text-center fp-social-box">
+							<a href="#">
+								<img src="images/social/social-icon-fb.png">
+							</a>
+						</span>
+						<span class="bg-primary text-center fp-social-box">
+							<a href="#">
+								<img src="images/social/social-icon-inst.png">
+							</a>
+						</span>
+						<span class="bg-primary text-center fp-social-box">
+							<a href="#">
+								<img src="images/social/social-icon-pin.png">
+							</a>
+						</span>
+						<span class="bg-primary text-center fp-social-box">
+							<a href="#">
+								<img src="images/social/social-icon-plus.png">
+							</a>
+						</span>
+						<span class="bg-primary text-center fp-social-box">
+							<a href="#">
+								<img src="images/social/social-icon-twit.png">
+							</a>
+						</span>
+					</div>
 				</div>
 				<!-- czwarta kolumna -->
 				<div class="col-md-6 col-lg-3 mb-3">
 					<h4 class="text-upercase text-white mb-3">Newsletter</h4>
+					<form action="">
+						<div class="form-group fp-newsletter-form-group">
+							<label class="sk-footer-text" for="email" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, maxime?</label>
+							<input class="form-control form-control-sm w-75 fp-newsletter-form-control" type="email" id="email" placeholder="Adress email">
+						</div>
+						<button class="btn btn-primary text-white text-uppercase fp-newsletter-btn">Subskrybcja</button>
+					</form>
 				</div>
 			</div>
 		</div>
