footer done, welcome header section in work

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,22 @@
 			<img class="img-fluid sk-hero-subheader" src='https://placehold.it/298x51' alt=''/>
 		</div>
 	</div>
+	<!-- sekcja powitalna-->
+	<div class="fp-front-page-welcome">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 mb-5 mb-lg-0">
+					<span class="text-muted text-uppercase fp-text-small fp-page-intro-subheader">nobis perferendis voluptatem"</span>
+					<h2 class="text uppercase fp-page-intro-header">Lorem ipsum dolor sit.</h2>
+					<div class="fp-hr fp-page-intro-rule"></div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores id quo sequi ut ipsam perspiciatis debitis aliquid rem sunt, laborum numquam eum fugit consectetur ex voluptatem est voluptatibus praesentium provident! Earum quasi nobis aliquam distinctio eligendi repellat libero, eos dignissimos nulla, assumenda inventore necessitatibus asperiores deleniti explicabo officiis in facilis illum accusantium recusandae, quo consequatur iste ullam. Vel, dolorem! Perferendis ab maiores ullam autem aliquid. Suscipit quae sint praesentium ipsum.</p>	
+				</div>
+				<div class="col-lg-6 pl-5">
+					<img class="img-fluid" src="images/pages/front-page-welcome.png" alt="welcome">
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- Stopka -->
 	<div class="fp-footer-top">
 		<div class="container fp-footer-top-content">
@@ -81,7 +97,7 @@
 							<a class="fp-footer-text" a href="#">3803 Stamm Trace</a>
 						</li>
 						<li>
-							<a class="fp-footer-text" a href="#">FAQ & Pomoc</a>
+							<a class="fp-footer-text" a href="#">FAQ &copy; Pomoc</a>
 						</li>
 						<li>
 							<a class="fp-footer-text" a href="#">Kovacek Ford</a>
@@ -141,13 +157,18 @@
 							<label class="sk-footer-text" for="email" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, maxime?</label>
 							<input class="form-control form-control-sm w-75 fp-newsletter-form-control" type="email" id="email" placeholder="Adress email">
 						</div>
-						<button class="btn btn-primary text-white text-uppercase fp-newsletter-btn">Subskrybcja</button>
+						<button class="btn btn-primary text-white text-uppercase fp-newsletter-btn">Lorem, ipsum.</button>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
-
+	<div class="fp-copy">
+		<div class="container text-center">
+			<span class="d-block fp-copy">&copy; Copiright 2018 fabrykaPikseli. Wszelkie prawa zastrzeżone</span>
+			<span class="d-block fp-copy-second">&copy; Design by fabrykaPikseli.</span>
+		</div>
+	</div>	
 
 
 
