welcome section during

--- a/src/index.html
+++ b/src/index.html
@@ -64,9 +64,35 @@
 			<div class="row">
 				<div class="col-lg-6 mb-5 mb-lg-0">
 					<span class="text-muted text-uppercase fp-text-small fp-page-intro-subheader">nobis perferendis voluptatem"</span>
-					<h2 class="text uppercase fp-page-intro-header">Lorem ipsum dolor sit.</h2>
+					<h2 class="text-uppercase fp-page-intro-header">Lorem ipsum <span class="text-primary"> dolor sit.</span></h2>
 					<div class="fp-hr fp-page-intro-rule"></div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores id quo sequi ut ipsam perspiciatis debitis aliquid rem sunt, laborum numquam eum fugit consectetur ex voluptatem est voluptatibus praesentium provident! Earum quasi nobis aliquam distinctio eligendi repellat libero, eos dignissimos nulla, assumenda inventore necessitatibus asperiores deleniti explicabo officiis in facilis illum accusantium recusandae, quo consequatur iste ullam. Vel, dolorem! Perferendis ab maiores ullam autem aliquid. Suscipit quae sint praesentium ipsum.</p>	
+					<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores id quo sequi ut ipsam perspiciatis debitis aliquid rem sunt, laborum numquam eum fugit consectetur ex voluptatem est voluptatibus praesentium provident! Earum quasi nobis aliquam distinctio eligendi repellat libero, eos dignissimos nulla, assumenda inventore necessitatibus asperiores deleniti explicabo officiis in facilis illum accusantium recusandae, quo consequatur iste ullam. Vel, dolorem! Perferendis ab maiores ullam autem aliquid. Suscipit quae sint praesentium ipsum.</p>	
+					<div class="d-none d-md-flex align-items-center justify-content-between text-uppercase fp-services-group fp-text-small">
+						<div class="fp-services-item">
+							<a href="#">
+								<img class="d-block mx-auto" src="images/project-indoor-icon.png" alt="">
+								<span class="d-block fp-service-item-title">Lorem ipsum</span>
+							</a>
+						</div>
+						<div class="fp-services-item">
+							<a href="#">
+								<img class="d-block mx-auto" src="images/project-furniture-icon.png" alt="">
+								<span class="d-block fp-service-item-title">Customer</span>
+							</a>
+						</div>
+						<div class="fp-services-item">
+							<a href="#">
+								<img class="d-block mx-auto" src="images/project-outdoor-icon.png" alt="">
+								<span class="d-block fp-service-item-title">Audie</span>
+							</a>
+						</div>
+						<div class="fp-services-item">
+							<a href="#">
+								<img class="d-block mx-auto" src="images/project-local-icon.png" alt="usługa">
+								<span class="d-block fp-service-item-title">Marlene</span>
+							</a>
+						</div>
+					</div>
 				</div>
 				<div class="col-lg-6 pl-5">
 					<img class="img-fluid" src="images/pages/front-page-welcome.png" alt="welcome">
