portfolio section added

--- a/src/index.html
+++ b/src/index.html
@@ -71,25 +71,25 @@
 						<div class="fp-services-item">
 							<a href="#">
 								<img class="d-block mx-auto" src="images/project-indoor-icon.png" alt="">
-								<span class="d-block fp-service-item-title">Lorem ipsum</span>
+								<span class="d-block text-center fp-service-item-title">Lorem ipsum</span>
 							</a>
 						</div>
-						<div class="fp-services-item">
+						<div class="fp-services-item fp-services-item-active">
 							<a href="#">
 								<img class="d-block mx-auto" src="images/project-furniture-icon.png" alt="">
-								<span class="d-block fp-service-item-title">Customer</span>
+								<span class="d-block text-center fp-service-item-title">Customer</span>
 							</a>
 						</div>
 						<div class="fp-services-item">
 							<a href="#">
 								<img class="d-block mx-auto" src="images/project-outdoor-icon.png" alt="">
-								<span class="d-block fp-service-item-title">Audie</span>
+								<span class="d-block text-center fp-service-item-title">Audie</span>
 							</a>
 						</div>
 						<div class="fp-services-item">
 							<a href="#">
 								<img class="d-block mx-auto" src="images/project-local-icon.png" alt="usługa">
-								<span class="d-block fp-service-item-title">Marlene</span>
+								<span class="d-block text-center fp-service-item-title">Marlene</span>
 							</a>
 						</div>
 					</div>
@@ -100,6 +100,42 @@
 			</div>
 		</div>
 	</div>
+	<!-- realizacje-->
+	<section class="fp-front-page-portfolio fp-alternate-bg">
+		<div class="container">
+			<div class="fp-section-header">
+				<h2 class="text-uppercase">3541 Kling Flat</h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga impedit rerum hic, cupiditate tenetur?</p>
+			</div>
+			<div class="row">
+				<div class="col">
+					<div class="fp-portfolio-box featured">
+						<div class="fp-portfolio-box-img fp-portfolio-img-overlay">
+							<img class="img-fluid" src='http://unsplash.it/g/800/630?random&gravity=center' alt="realization1">
+						</div>
+						<div class="text-center fp-portfolio-box-text">
+							<h3 class="text-uppercase sk-portfolio-box-title">Abner Keys</h3>
+							<p class="d-none d-md-block">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam, ad!</p>
+						</div>
+					</div>
+				</div>
+				<div class="col d-none d-xl-block">
+					<div class="d-flex flex-xl-wrap justify-content-between">
+						<img class="img-fluid" src='http://unsplash.it/g/255/198?random&gravity=center' alt="realization2">
+						<img class="img-fluid" src='http://unsplash.it/g/255/198?random&gravity=center' alt="realization2">
+						<img class="img-fluid" src='http://unsplash.it/g/540/198?random&gravity=center' alt="realization2">
+					</div>
+				</div>
+			</div>
+
+
+
+		</div>
+
+
+
+
+	</section> 
 	<!-- Stopka -->
 	<div class="fp-footer-top">
 		<div class="container fp-footer-top-content">
