services section and style added

--- a/src/index.html
+++ b/src/index.html
@@ -127,15 +127,134 @@
 					</div>
 				</div>
 			</div>
-
-
-
 		</div>
-
-
-
-
-	</section> 
+	</section>
+	<!-- usługi -->
+	<section class="fp-front-page-services">
+		<div class="container">
+			<div class="fp-section-header">
+				<h2 class="text-uppercase"></h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis libero ad modi doloremque?</p>
+			</div>
+			<div class="row">
+				<!-- jeden box -->
+				<div class="col-md-6 col-lg-4">
+					<div class="fp-services-box">
+						<div class="d-flex sk-services-box-top">
+							<div class="fp-services-box-shadow fp-services-box-active"></div>
+							<div class="d-flex fp-services-box-img">
+								<img src="images/service-1.jpg" alt="service">
+							</div>
+							<div class="text-uppercase fp-services-box-title">
+								<span class="d-block fp-services-box-header">Handcrafted</span>
+								<span class="d-block text-muted sk-text-small">Wooden</span> 	
+							</div>
+						</div>
+						<div class="d-block fp-services-box-text">
+							<p class="sk-text-small">
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero neque fuga ex consectetur voluptates deleniti facilis esse officiis voluptas dolores nulla quibusdam distinctio, asperiores quod molestias dolore alias incidunt corrupti.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="fp-services-box">
+						<div class="d-flex sk-services-box-top">
+							<div class="fp-services-box-shadow"></div>
+							<div class="d-flex fp-services-box-img">
+								<img src="images/service-2.jpg" alt="service">
+							</div>
+							<div class="text-uppercase fp-services-box-title">
+								<span class="d-block fp-services-box-header">Handcrafted</span>
+								<span class="d-block text-muted sk-text-small">Wooden</span> 	
+							</div>
+						</div>
+						<div class="d-block fp-services-box-text">
+							<p class="sk-text-small">
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero neque fuga ex consectetur voluptates deleniti facilis esse officiis voluptas dolores nulla quibusdam distinctio, asperiores quod molestias dolore alias incidunt corrupti.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="fp-services-box">
+						<div class="d-flex sk-services-box-top">
+							<div class="fp-services-box-shadow"></div>
+							<div class="d-flex fp-services-box-img">
+								<img src="images/service-3.jpg" alt="service">
+							</div>
+							<div class="text-uppercase fp-services-box-title">
+								<span class="d-block fp-services-box-header">Handcrafted</span>
+								<span class="d-block text-muted sk-text-small">Wooden</span> 	
+							</div>
+						</div>
+						<div class="d-block fp-services-box-text">
+							<p class="sk-text-small">
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero neque fuga ex consectetur voluptates deleniti facilis esse officiis voluptas dolores nulla quibusdam distinctio, asperiores quod molestias dolore alias incidunt corrupti.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="fp-services-box">
+						<div class="d-flex sk-services-box-top">
+							<div class="fp-services-box-shadow"></div>
+							<div class="d-flex fp-services-box-img">
+								<img src="images/service-4.jpg" alt="service">
+							</div>
+							<div class="text-uppercase fp-services-box-title">
+								<span class="d-block fp-services-box-header">Handcrafted</span>
+								<span class="d-block text-muted sk-text-small">Wooden</span> 	
+							</div>
+						</div>
+						<div class="d-block fp-services-box-text">
+							<p class="sk-text-small">
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero neque fuga ex consectetur voluptates deleniti facilis esse officiis voluptas dolores nulla quibusdam distinctio, asperiores quod molestias dolore alias incidunt corrupti.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="fp-services-box">
+						<div class="d-flex sk-services-box-top">
+							<div class="fp-services-box-shadow"></div>
+							<div class="d-flex fp-services-box-img">
+								<img src="images/service-1.jpg" alt="service">
+							</div>
+							<div class="text-uppercase fp-services-box-title">
+								<span class="d-block fp-services-box-header">Handcrafted</span>
+								<span class="d-block text-muted sk-text-small">Wooden</span> 	
+							</div>
+						</div>
+						<div class="d-block fp-services-box-text">
+							<p class="sk-text-small">
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero neque fuga ex consectetur voluptates deleniti facilis esse officiis voluptas dolores nulla quibusdam distinctio, asperiores quod molestias dolore alias incidunt corrupti.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="fp-services-box">
+						<div class="d-flex sk-services-box-top">
+							<div class="fp-services-box-shadow"></div>
+							<div class="d-flex fp-services-box-img">
+								<img src="images/service-2.jpg" alt="service">
+							</div>
+							<div class="text-uppercase fp-services-box-title">
+								<span class="d-block fp-services-box-header">Handcrafted</span>
+								<span class="d-block text-muted sk-text-small">Wooden</span> 	
+							</div>
+						</div>
+						<div class="d-block fp-services-box-text">
+							<p class="sk-text-small">
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero neque fuga ex consectetur voluptates deleniti facilis esse officiis voluptas dolores nulla quibusdam distinctio, asperiores quod molestias dolore alias incidunt corrupti.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- Stopka -->
 	<div class="fp-footer-top">
 		<div class="container fp-footer-top-content">
